added run-all function and script